WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198137
WebKit does not generate an ESC key event for CMD+.
https://bugs.webkit.org/show_bug.cgi?id=198137
Summary
WebKit does not generate an ESC key event for CMD+.
Brent Fulgham
Reported
2019-05-22 13:05:46 PDT
The Apple iPad keyboard does not have an escape key. The CMD+. keystroke maps to ESC, but WebKit does not honor this behavior.
Attachments
Patch
(2.03 KB, patch)
2019-05-22 13:11 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2019-05-22 13:11:31 PDT
Created
attachment 370437
[details]
Patch
Brent Fulgham
Comment 2
2019-05-22 13:12:19 PDT
<
rdar://problem/51038641
>
Brent Fulgham
Comment 3
2019-05-22 13:14:41 PDT
Comment on
attachment 370437
[details]
Patch r=me (I uploaded the patch, but the code change is Daniel's).
WebKit Commit Bot
Comment 4
2019-05-22 13:57:55 PDT
The commit-queue encountered the following flaky tests while processing
attachment 370437
[details]
: fetch/fetch-worker-crash.html
bug 187257
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-05-22 13:58:38 PDT
Comment on
attachment 370437
[details]
Patch Clearing flags on attachment: 370437 Committed
r245644
: <
https://trac.webkit.org/changeset/245644
>
WebKit Commit Bot
Comment 6
2019-05-22 13:58:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug