WebKit does not generate an ESC key event for CMD+. https://bugs.webkit.org/show_bug.cgi?id=198137 <rdar://problem/51038641>

Patch by Daniel Bates <dabates@apple.com> on 2019-05-22
Reviewed by Brent Fulgham.

This patch maps the Command + '.' keystroke to the 'Escape'. This also requires a change to UIKit to properly pass
the key state to WebKit (see <rdar://problem/46431552>).

* platform/ios/WebEvent.mm:
(-[WebEvent initWithKeyEventType:timeStamp:characters:charactersIgnoringModifiers:modifiers:isRepeating:withFlags:withInputManagerHint:keyCode:isTabKey:]):

Canonical link: https://commits.webkit.org/212203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245644 268f45cc-cd09-0410-ab3c-d52691b4dbfc